[package]
name = "transient-asm"
description = "Toolchain for TransientAssembly. Includes a compiler and virtual machine."
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/redtechtiger/transient-asm"

[[bin]]
name = "transientvm"
path = "src/bin/transientvm.rs"

[[bin]]
name = "transientcompile"
path = "src/bin/transientcompile.rs"

[dependencies]
